# archview

./: .archviewignore  .flake8  .gitignore  LICENSE  README.md  _engine.c  _engine.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
archview/: __init__.py  annotations.py  cli.py  diff.py  graph.py  ignore.py  server.py  watch.py
archview/analysis/: __init__.py  collect.py  elements.py  graph.py  model.py
archview/analysis/python/: __init__.py  edges.py  parse.py  refs.py  stdlib_names.py
archview/interface/: __init__.py  annotations.py  diff.py  server.py
archview/interface/static/: live.html
archview/static/: live.html
demo/: .archviewignore  broken.py  callbacks.py  config.yaml  dataset.py  evaluate.py  experimental.py  helpers.py  legacy_train.py  main.py  metrics.py  model.py  preprocess.sh  registry.py  run.sh  train.py
demo/augment/: __init__.py  mixup.py  transforms.py
docs/: DEMO_SCRIPT.md  demo_build.sh
example_project/: .analyzeignore  cleanup.py  export_report.py  main.py  migrate.py  seed_db.py
example_project/api/: auth.py  routes.py
example_project/app/: __init__.py  config.py  main.py
example_project/app/api/: auth.py  routes.py
example_project/app/data/: cache.py  formatters.py
example_project/app/models/: order.py  user.py
example_project/app/services/: email_service.py  order_service.py  payment_service.py  user_service.py
example_project/app/utils/: logger.py
example_project/data/: __init__.py  cache.py  formatters.py
example_project/models/: order.py
example_project/scripts/: cleanup.py  export_report.py  migrate.py  seed_db.py
example_project/services/: email_service.py  order_service.py  payment_service.py  user_service.py
example_project/utils/: validators.py
examples/: README.md
examples/01_basic_pipeline/: detector.py  main.py  model.py  pipeline.py  utils.py
examples/02_package_structure/: train.py
examples/03_configs_and_shells/: train.py
examples/04_edge_cases/: a.py  b.py  broken.py  main.py  orphan.py
examples/05_relative_imports/: main.py
tests/: test_graph.py
(+28 files in other folders)
