[project]
name = "archview"
version = "0.2.1"
description = "Interactive live architecture viewer for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Lorenzo Mirante", email = "lorenzomirante@outlook.com" }]
keywords = ["architecture", "dependency-graph", "visualization", "ast", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lm17918/archview"
Repository = "https://github.com/lm17918/archview"
Issues = "https://github.com/lm17918/archview/issues"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
dev = ["pytest>=7.0.0", "black>=24.0.0", "flake8>=7.0.0"]

[project.scripts]
archview = "archview.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["archview*"]

[tool.setuptools.package-data]
archview = ["static/*.html", "static/*.js"]

[tool.black]
target-version = ["py39"]
line-length = 88
